<resources>
    <string name="app_name">FF-Demo</string>
    <string-array name="activity_level">
        <item>little or no exercise</item>
        <item>light exercise/sports 1-3 days/week</item>
        <item>moderate exercise/sports 3-5 days/week</item>
        <item>hard exercise/sports 6-7 days a week</item>
        <item>very hard exercise/sports 6-7 days 2x a week</item>
    </string-array>
    <string name="percent_sign">\%%</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="goals_array">
        <item>Maintenance</item>
        <item>Weight loss</item>
        <item>Weight gain</item>

    </string-array>
    <string name="title_activity_home__drawer">Home_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
</resources>
